# ChangeLog for gnome-extra/teatime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  teatime-2.8.0.ebuild:
  Add suggested RDEPEND=${DEPEND}

  18 Apr 2008; Ivan Toshkov (itoshkov) <ivan@toshkov.org>
  +teatime-2.8.0.ebuild,
  +files/teatime-2.8.0-adding-slash-for-pixmaps-dir.patch, +metadata.xml:
  New Ebuild for bug 124455 thanks to Bernhard Reiter, Michael Klapproth, and
  Jan Scholz.
