@@ -1,5 +1,5 @@
 AUX teatime-2.8.0-adding-slash-for-pixmaps-dir.patch 431 RMD160 dd464c15c8ba19e6d7b1a188b30a8598a5f6b693 SHA1 8473919cf3547b7c67e178e3b8607176393064d6 SHA256 f71d6c4a588c6439cfe3ba7b74a975a0d5527f3dccb30b67838a0d6b3603aacf
-DIST teatime_applet_2-2.8.0.tar.gz 799283 RMD160 f89c53e7fb91f38226b396accebb5ca8a4798287 SHA1 313fc1b6d3e9d11f5ac4b31948cfb17fa267958f SHA256 a76477a3b49b8171a7ccb78f2f96a890fadfe2160451e22e68c31b01e67a6e7d
-EBUILD teatime-2.8.0.ebuild 794 RMD160 2eed48d80c1077c96d58b1a666e264b1fa99a493 SHA1 5a084ae018eede5a9186797c34749fe7301668fc SHA256 ba6821d0da721b85fc8f32fcf9f76f4baa2cf32d1274b22dff47d98b39b747b1
-MISC ChangeLog 488 RMD160 0d89ef4aba6fa59af17b618f7f074ecb5bcce5c0 SHA1 119d36c666b19f6f9499528aa1e6405f556b38a3 SHA256 02c65e088123c1f5b1c35e0d5e27d80977f5a47c9a27f053db655e69e6fba776
+DIST teatime_2.8.0.orig.tar.gz 789317 RMD160 451ce14118bb1ae67bfdc9c3537ca7603ea79c0a SHA1 0adcfa42e2b059b3608118f5720aebb2fc49f86c SHA256 0e8ef7b5a7029fa1386b3d228ee25317ca5d33b1f64e4e0b2f4094417dc1e3f8
+EBUILD teatime-2.8.0.ebuild 778 RMD160 e7afd661dea53d7f645b3ddbe5af6098704a87d8 SHA1 926d969de93f842265516a1eb408cbec370a1e47 SHA256 0d52a07acd6ffb3cd4d0f61ce6b2dd76bd1e71f995f6b8457f35dfa658933f1b
+MISC ChangeLog 664 RMD160 c41b4166ef4497986f62866b33e2db7f660a3125 SHA1 b0ded2c1ea1b4d23396e76ab945ff0fbc17d0999 SHA256 dd2c9a404282f95a46100e1945934bfcd02c1b7428f46bd7383737a8debea368
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
